# ai-practical-handson

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  deps.py  main.py
app/api/routes/: __init__.py  chat.py
app/db/: __init__.py  models.py  repository.py  session.py
app/services/: __init__.py  agent.py  chroma_schema.py  postgres_query.py  sql_guard.py
scripts/: init_pg.sql  seed_chroma.py
